<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/distance_buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/travel_distance_bg"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/travel_distance_text_bg"
            android:gravity="center"
            android:text="@string/travel_distance"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/close_by_button"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:background="@drawable/button_left_selected"
                android:text="@string/close_by"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@android:color/white" />

            <Button
                android:id="@+id/far_away_button"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:background="@drawable/button_center_unselected"
                android:text="@string/far_away"
                android:textColor="@color/text_color_grey"
                android:textSize="15sp"
                android:textStyle="bold" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@android:color/white" />

            <Button
                android:id="@+id/whole_world_button"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:background="@drawable/button_right_unselected"
                android:text="@string/whole_world"
                android:textColor="@color/text_color_grey"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <com.avallon.phonetourist.items.CustomButton
        android:id="@+id/custom_button"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true" />

    <com.avallon.phonetourist.items.CustomCompassArrows
        android:id="@+id/custom_compass_arrows"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true" />

    <RelativeLayout
        android:id="@+id/word_cloud_above"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/custom_button"
        android:layout_below="@id/distance_buttons_container" >
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/word_cloud_below"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/custom_button" >
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/instructions_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/instructions_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/instructions_title"
            android:textColor="@color/text_color_dark"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/instruction1_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction1"
            android:textColor="@color/text_color_dark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/instruction2_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction2"
            android:textColor="@color/text_color_dark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/instruction3_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction3"
            android:textColor="@color/text_color_dark"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>